# anesthesia-intel

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRACTICE_PROFILE.md  README.md  pyproject.toml
.claude/commands/: digest.md
.github/workflows/: ci.yml  daily.yml
config/: filters.yaml  models.yaml  settings.yaml  sources.yaml
db/: schema.sql
db/migrations/: .keep  20260711120001_create_sources.sql  20260711120002_create_items.sql  20260711120003_create_digests.sql  20260711120004_create_scores.sql  20260711120005_create_digest_items.sql  20260711120006_create_feedback.sql  20260711120007_create_eval_labels.sql
docs/: 00_EXECUTIVE_SUMMARY.md  01_PRD.md  02_TECHNICAL_DESIGN.md  03_ROADMAP.md  04_REPO_AND_CLAUDE_CODE.md  06_PROMPTS_MANUAL_AND_KICKOFF.md  07_START_HERE_SETUP_GUIDE.md  08_HANDOFF_DIGEST.md
docs/decisions/: 0001-jsonl-interim-triage-file.md  0002-wide-net-seen-ledger.md  0003-tier-b-keyword-gate.md  ideas.md  log.md
evalset/: labels.csv  run_eval.py
functions/feedback/: index.ts
llm/: __init__.py  batching.py  scores.py
pipeline/: __init__.py  db.py  digest_render.py  enrich.py  normalize.py  prefilter.py  run_daily.py  seen_store.py
pipeline/ingest/: __init__.py  fda.py  pubmed.py  rss.py
prompts/: deep_dive-v1.md  synthesis-v1.md  synthesis-v2.md  triage-v1.md
templates/: digest.html.j2  digest.sample.html
tests/: conftest.py  test_batching.py  test_digest_render.py  test_enrich.py  test_eval.py  test_normalize_prefilter.py  test_pubmed.py  test_run_daily.py  test_scores.py  test_seen_store.py  test_smoke.py
(+2 files in other folders)
